--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,7 @@
 }
 
 $colorOrange: #fd9d3e;
+$colorBlack: #121619;
 
 .dn {
   display: none;
@@ -278,7 +279,9 @@ $colorOrange: #fd9d3e;
     }
     .first-part-img {
       position: relative;
-
+      .first-part-img-pizza {
+        width: 90%;
+      }
       .first-part-second-img {
         display: none;
         animation: opacity 6s;
@@ -290,9 +293,9 @@ $colorOrange: #fd9d3e;
         }
         .garniture-1 {
           animation: opacityScaling 4s;
-          left: 75%;
+          left: 72%;
           bottom: 72%;
-          width: 35%;
+          width: 30%;
         }
         .garniture-2 {
           animation: opacityScaling 5s;
@@ -300,22 +303,25 @@ $colorOrange: #fd9d3e;
         }
         .garniture-3 {
           animation: opacityScaling 6s;
-          top: 15%;
-          left: -10%;
+          top: 20%;
+          left: -7%;
+          width: 10%;
         }
         .garniture-4 {
           animation: opacityScaling 6s;
           bottom: -12%;
           left: 45%;
+          z-index: 1;
         }
         .garniture-5 {
           animation: opacityScaling 5s;
-          right: -10%;
+          right: 0%;
         }
         .garniture-6 {
           animation: opacityScaling 2.5s;
-          right: -7%;
-          top: 85%;
+          right: 0%;
+          top: 83%;
+          width: 30%;
         }
       }
     }
@@ -336,8 +342,67 @@ $colorOrange: #fd9d3e;
   }
 }
 
-.second-main{
-  
+.second-main {
+  width: 100%;
+  height: 400px;
+  background-color: $colorOrange;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .second-main-content {
+    .second-main-content-svg-text {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0px 200px;
+      img {
+        max-width: 90px;
+      }
+
+      .second-main-order {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        img {
+          animation: opacityScaling 2s;
+          cursor: pointer;
+        }
+
+        p {
+          animation: opacityScaling 2.5s;
+          font-size: 25px;
+          font-weight: 900;
+          padding-top: 15px;
+          color: $colorBlack;
+        }
+        span {
+          animation: opacityScaling 3s;
+          width: 65%;
+          text-align: center;
+          padding-top: 20px;
+          font-size: 12px;
+        }
+      }
+    }
+
+    .second-main-top-img {
+      position: absolute;
+      bottom: 99%;
+      img {
+        width: 100%;
+      }
+    }
+
+    .second-main-bottom-img {
+      position: absolute;
+      top: 99%;
+      img {
+        width: 100%;
+      }
+    }
+  }
 }
 
 //RESPONSIVE
@@ -904,6 +969,36 @@ $colorOrange: #fd9d3e;
 /*#endregion */
 
 /*#region Main-Second-Part-Responsive*/
+@media only screen and (max-width: 1400px) {
+  .second-main {
+    .second-main-content {
+      .second-main-content-svg-text {
+        .second-main-order {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          img {
+            animation: opacityScaling 2s;
+            cursor: pointer;
+          }
+
+          p {
+            font-size: 25px;
+            font-weight: 900;
+            padding-top: 15px;
+          }
+          span {
+            width: 55%;
+            text-align: center;
+            padding-top: 20px;
+            font-size: 12px;
+          }
+        }
+      }
+    }
+  }
+}
 
 /*#endregion*/
 
