--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -280,6 +280,7 @@ $colorBlack: #121619;
     .first-part-img {
       position: relative;
       .first-part-img-pizza {
+        animation: opacity 2s;
         width: 90%;
       }
       .first-part-second-img {
@@ -343,7 +344,6 @@ $colorBlack: #121619;
 }
 
 .second-main {
-  width: 100%;
   height: 400px;
   background-color: $colorOrange;
   position: relative;
@@ -359,7 +359,6 @@ $colorBlack: #121619;
       img {
         max-width: 90px;
       }
-
       .second-main-order {
         display: flex;
         flex-direction: column;
@@ -369,7 +368,6 @@ $colorBlack: #121619;
           animation: opacityScaling 2s;
           cursor: pointer;
         }
-
         p {
           animation: opacityScaling 2.5s;
           font-size: 25px;
@@ -401,6 +399,21 @@ $colorBlack: #121619;
       img {
         width: 100%;
       }
+    }
+  }
+}
+
+.third-main {
+  background-color: gray;
+  height: 800px;
+  width: 100%;
+  position: relative;
+  z-index: -1;
+  .third-main-bottom-img {
+    position: absolute;
+    bottom: 0;
+    img {
+      width: 100%;
     }
   }
 }
@@ -968,23 +981,15 @@ $colorBlack: #121619;
 
 /*#endregion */
 
-/*#region Main-Second-Part-Responsive*/
-@media only screen and (max-width: 1400px) {
+/*#region Main-Second-Responsive*/
+@media only screen and (max-width: 1450px) {
   .second-main {
     .second-main-content {
       .second-main-content-svg-text {
+        padding: 0px 190px;
         .second-main-order {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          img {
-            animation: opacityScaling 2s;
-            cursor: pointer;
-          }
-
           p {
-            font-size: 25px;
+            font-size: 22px;
             font-weight: 900;
             padding-top: 15px;
           }
@@ -993,6 +998,175 @@ $colorBlack: #121619;
             text-align: center;
             padding-top: 20px;
             font-size: 12px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+  .second-main {
+    .second-main-content {
+      .second-main-content-svg-text {
+        padding: 0px 175px;
+        .second-main-order {
+          p {
+            font-size: 20px;
+            font-weight: 900;
+            padding-top: 15px;
+          }
+          span {
+            width: 55%;
+            text-align: center;
+            padding-top: 20px;
+            font-size: 12px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .second-main {
+    .second-main-content {
+      .second-main-content-svg-text {
+        padding: 0px 135px;
+        .second-main-order {
+          p {
+            font-size: 20px;
+            font-weight: 700;
+            padding-top: 15px;
+          }
+          span {
+            width: 55%;
+            text-align: center;
+            padding-top: 20px;
+            font-size: 12px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .second-main {
+    .second-main-content {
+      .second-main-content-svg-text {
+        padding: 0px 100px;
+        .second-main-order {
+          p {
+            font-size: 20px;
+            font-weight: 700;
+            padding-top: 15px;
+          }
+          span {
+            width: 55%;
+            text-align: center;
+            padding-top: 20px;
+            font-size: 12px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .second-main {
+    .second-main-content {
+      .second-main-content-svg-text {
+        padding: 0px 50px;
+        .second-main-order {
+          p {
+            font-size: 20px;
+            font-weight: 700;
+            padding-top: 15px;
+          }
+          span {
+            width: 55%;
+            text-align: center;
+            padding-top: 20px;
+            font-size: 12px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 790px) {
+  .second-main {
+    height: 750px;
+    .second-main-content {
+      .second-main-content-svg-text {
+        flex-direction: column;
+        padding: 0px 50px;
+        .second-main-order {
+          padding: 20px 0px;
+          p {
+            font-size: 20px;
+            font-weight: 700;
+            padding-top: 15px;
+          }
+          span {
+            width: 75%;
+            text-align: center;
+            padding-top: 20px;
+            font-size: 12px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 510px) {
+  .second-main {
+    height: 750px;
+    .second-main-content {
+      .second-main-content-svg-text {
+        flex-direction: column;
+        padding: 0px 50px;
+        .second-main-order {
+          padding: 20px 0px;
+          p {
+            font-size: 20px;
+            font-weight: 700;
+            padding-top: 15px;
+          }
+          span {
+            text-align: center;
+            padding-top: 20px;
+            font-size: 12px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 430px) {
+  .second-main {
+    height: 780px;
+    .second-main-content {
+      .second-main-content-svg-text {
+        flex-direction: column;
+        padding: 0px 30px;
+        .second-main-order {
+          padding: 25px 0px;
+          p {
+            font-size: 18px;
+            font-weight: 700;
+            padding-top: 15px;
+          }
+          span {
+            width: 85%;
+            text-align: center;
+            padding-top: 20px;
+            font-size: 11px;
           }
         }
       }
