--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,14 @@
   display: flex;
 }
 
+.white {
+  color: white;
+}
+
+.opacityZero {
+  opacity: 0;
+}
+
 .header {
   z-index: 2;
   transition: 0.5s all;
@@ -214,7 +222,7 @@
   position: relative;
   background-color: #121619;
   width: 100%;
-  height: 730px;
+  height: 820px;
   z-index: -1;
   display: flex;
   align-items: center;
@@ -317,10 +325,10 @@
   justify-content: center;
 }
 .second-main .second-main-content .second-main-content-svg-text {
-  display: flex;
   align-items: center;
   justify-content: center;
   padding: 0px 200px;
+  display: none;
 }
 .second-main .second-main-content .second-main-content-svg-text img {
   max-width: 90px;
@@ -330,20 +338,21 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  animation: marginBottom 1s;
 }
 .second-main .second-main-content .second-main-content-svg-text .second-main-order img {
-  animation: opacityScaling 2s;
+  animation: opacityScaling 1s;
   cursor: pointer;
 }
 .second-main .second-main-content .second-main-content-svg-text .second-main-order p {
-  animation: opacityScaling 2.5s;
+  animation: opacityScaling 2s;
   font-size: 25px;
   font-weight: 900;
   padding-top: 15px;
   color: #121619;
 }
 .second-main .second-main-content .second-main-content-svg-text .second-main-order span {
-  animation: opacityScaling 3s;
+  animation: opacityScaling 2.5s;
   width: 65%;
   text-align: center;
   padding-top: 20px;
@@ -351,6 +360,7 @@
 }
 .second-main .second-main-content .second-main-top-img {
   position: absolute;
+  left: 0;
   bottom: 99%;
 }
 .second-main .second-main-content .second-main-top-img img {
@@ -358,6 +368,7 @@
 }
 .second-main .second-main-content .second-main-bottom-img {
   position: absolute;
+  left: 0;
   top: 99%;
 }
 .second-main .second-main-content .second-main-bottom-img img {
@@ -883,6 +894,78 @@
   }
 }
 /*#endregion*/
+footer {
+  height: 550px;
+  background-color: #121619;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+footer .footer-content {
+  display: flex;
+  flex-direction: row;
+}
+footer .footer-content .footer-left-text {
+  display: flex;
+  flex-direction: column;
+  width: 33%;
+  margin: 0px 30px;
+}
+footer .footer-content .footer-left-text img {
+  width: 50%;
+}
+footer .footer-content .footer-left-text span {
+  padding-top: 25px;
+  color: white;
+  font-size: 14px;
+}
+footer .footer-content .footer-center-text {
+  display: flex;
+  flex-direction: column;
+  width: 33%;
+  margin: 0px 30px;
+}
+footer .footer-content .footer-center-text p {
+  color: white;
+  font-weight: 900;
+  font-size: 18px;
+  padding-bottom: 20px;
+}
+footer .footer-content .footer-center-text span {
+  padding-top: 25px;
+  color: white;
+  font-size: 14px;
+  letter-spacing: 1px;
+}
+footer .footer-content .footer-center-text span span {
+  padding-left: 15px;
+}
+footer .footer-content .footer-right-text {
+  display: flex;
+  flex-direction: column;
+  width: 33%;
+  margin: 0px 30px;
+}
+footer .footer-content .footer-right-text p {
+  color: white;
+  font-weight: 900;
+  font-size: 18px;
+  padding-bottom: 20px;
+}
+footer .footer-content .footer-right-text ul {
+  padding-top: 10px;
+}
+footer .footer-content .footer-right-text ul li {
+  color: white;
+  letter-spacing: 3px;
+  font-size: 12px;
+  padding-top: 15px;
+  cursor: pointer;
+}
+footer .footer-content .footer-right-text ul li:hover {
+  color: #fd9d3e;
+}
+
 /*#region Animation*/
 @keyframes opacity {
   0% {
@@ -900,6 +983,14 @@
   100% {
     opacity: 1;
     scale: 1;
+  }
+}
+@keyframes marginBottom {
+  0% {
+    margin-top: 100px;
+  }
+  100% {
+    margin-bottom: 0px;
   }
 }
 /*#endregion *//*# sourceMappingURL=style.css.map */
