--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,6 +25,14 @@ $colorBlack: #121619;
   display: flex;
 }
 
+.white {
+  color: white;
+}
+
+.opacityZero {
+  opacity: 0;
+}
+
 // Header-CSS
 
 .header {
@@ -245,7 +253,7 @@ $colorBlack: #121619;
   // background-color: #1e291e;
   background-color: #121619;
   width: 100%;
-  height: 730px;
+  height: 820px;
   z-index: -1;
   display: flex;
   align-items: center;
@@ -352,10 +360,10 @@ $colorBlack: #121619;
   justify-content: center;
   .second-main-content {
     .second-main-content-svg-text {
-      display: flex;
       align-items: center;
       justify-content: center;
       padding: 0px 200px;
+      display: none;
       img {
         max-width: 90px;
       }
@@ -364,19 +372,20 @@ $colorBlack: #121619;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        animation: marginBottom 1s;
         img {
-          animation: opacityScaling 2s;
+          animation: opacityScaling 1s;
           cursor: pointer;
         }
         p {
-          animation: opacityScaling 2.5s;
+          animation: opacityScaling 2s;
           font-size: 25px;
           font-weight: 900;
           padding-top: 15px;
           color: $colorBlack;
         }
         span {
-          animation: opacityScaling 3s;
+          animation: opacityScaling 2.5s;
           width: 65%;
           text-align: center;
           padding-top: 20px;
@@ -387,6 +396,7 @@ $colorBlack: #121619;
 
     .second-main-top-img {
       position: absolute;
+      left: 0;
       bottom: 99%;
       img {
         width: 100%;
@@ -395,6 +405,7 @@ $colorBlack: #121619;
 
     .second-main-bottom-img {
       position: absolute;
+      left: 0;
       top: 99%;
       img {
         width: 100%;
@@ -1177,6 +1188,78 @@ $colorBlack: #121619;
 /*#endregion*/
 
 //FOOTER
+footer {
+  height: 550px;
+  background-color: $colorBlack;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .footer-content {
+    display: flex;
+    flex-direction: row;
+    .footer-left-text {
+      display: flex;
+      flex-direction: column;
+      width: 33%;
+      margin: 0px 30px;
+      img {
+        width: 50%;
+      }
+      span {
+        padding-top: 25px;
+        color: white;
+        font-size: 14px;
+      }
+    }
+    .footer-center-text {
+      display: flex;
+      flex-direction: column;
+      width: 33%;
+      margin: 0px 30px;
+      p {
+        color: white;
+        font-weight: 900;
+        font-size: 18px;
+        padding-bottom: 20px;
+      }
+      span {
+        padding-top: 25px;
+        color: white;
+        font-size: 14px;
+        letter-spacing: 1px;
+
+        span {
+          padding-left: 15px;
+        }
+      }
+    }
+    .footer-right-text {
+      display: flex;
+      flex-direction: column;
+      width: 33%;
+      margin: 0px 30px;
+      p {
+        color: white;
+        font-weight: 900;
+        font-size: 18px;
+        padding-bottom: 20px;
+      }
+      ul {
+        padding-top: 10px;
+        li {
+          color: white;
+          letter-spacing: 3px;
+          font-size: 12px;
+          padding-top: 15px;
+          cursor: pointer;
+          &:hover {
+            color: $colorOrange;
+          }
+        }
+      }
+    }
+  }
+}
 
 //Animations
 /*#region Animation*/
@@ -1199,6 +1282,16 @@ $colorBlack: #121619;
   100% {
     opacity: 1;
     scale: 1;
+  }
+}
+
+@keyframes marginBottom {
+  0% {
+    margin-top: 100px;
+  }
+
+  100% {
+    margin-bottom: 0px;
   }
 }
 
