--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -429,6 +429,115 @@ $colorBlack: #121619;
   }
 }
 
+//FOOTER-CSS
+footer {
+  height: 550px;
+  background-color: $colorBlack;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-top: 100px;
+  .footer-content {
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 100px;
+    .footer-left-text {
+      display: flex;
+      flex-direction: column;
+      width: 33%;
+      margin: 0px 30px;
+      img {
+        width: 160px;
+      }
+      span {
+        padding-top: 25px;
+        color: white;
+        font-size: 14px;
+      }
+    }
+    .footer-center-text {
+      display: flex;
+      flex-direction: column;
+      width: 33%;
+      margin: 0px 30px;
+      p {
+        color: white;
+        font-weight: 900;
+        font-size: 18px;
+        padding-bottom: 20px;
+      }
+      span {
+        white-space: nowrap;
+        padding-top: 25px;
+        color: white;
+        font-size: 14px;
+        letter-spacing: 1px;
+
+        span {
+          padding-left: 15px;
+        }
+      }
+    }
+    .footer-right-text {
+      display: flex;
+      flex-direction: column;
+      width: 33%;
+      margin: 0px 30px;
+      p {
+        color: white;
+        font-weight: 900;
+        font-size: 18px;
+        padding-bottom: 20px;
+      }
+      ul {
+        padding-top: 10px;
+        li {
+          color: white;
+          letter-spacing: 3px;
+          font-size: 12px;
+          padding-top: 15px;
+          cursor: pointer;
+          white-space: nowrap;
+          &:hover {
+            color: $colorOrange;
+          }
+        }
+      }
+    }
+  }
+
+  .footer-bottom {
+    .hr {
+      width: 1150px;
+      height: 3px;
+      background-color: #202529;
+    }
+    .footer-bottom-span-logos {
+      padding-top: 50px;
+      display: flex;
+      justify-content: space-between;
+      padding: 30px 0px;
+      span {
+        color: white;
+        font-size: 14px;
+      }
+      .footer-logo-group {
+        i {
+          font-size: 40px;
+          padding: 0px 8px;
+          color: rgb(65, 65, 65);
+          color: $colorOrange;
+          cursor: pointer;
+          &:hover {
+            color: rgb(65, 64, 64);
+          }
+        }
+      }
+    }
+  }
+}
+
 //RESPONSIVE
 
 //HEADER
@@ -1188,78 +1297,242 @@ $colorBlack: #121619;
 /*#endregion*/
 
 //FOOTER
-footer {
-  height: 550px;
-  background-color: $colorBlack;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  .footer-content {
-    display: flex;
-    flex-direction: row;
-    .footer-left-text {
-      display: flex;
-      flex-direction: column;
-      width: 33%;
-      margin: 0px 30px;
-      img {
-        width: 50%;
-      }
-      span {
-        padding-top: 25px;
-        color: white;
-        font-size: 14px;
-      }
+/*#region Footer-Responsive*/
+@media only screen and (max-width: 1200px) {
+  footer {
+    .footer-content {
+      padding: 0px 50px;
+      padding-bottom: 100px;
     }
-    .footer-center-text {
-      display: flex;
-      flex-direction: column;
-      width: 33%;
-      margin: 0px 30px;
-      p {
-        color: white;
-        font-weight: 900;
-        font-size: 18px;
-        padding-bottom: 20px;
-      }
-      span {
-        padding-top: 25px;
-        color: white;
-        font-size: 14px;
-        letter-spacing: 1px;
-
-        span {
-          padding-left: 15px;
-        }
-      }
-    }
-    .footer-right-text {
-      display: flex;
-      flex-direction: column;
-      width: 33%;
-      margin: 0px 30px;
-      p {
-        color: white;
-        font-weight: 900;
-        font-size: 18px;
-        padding-bottom: 20px;
-      }
-      ul {
-        padding-top: 10px;
-        li {
-          color: white;
-          letter-spacing: 3px;
-          font-size: 12px;
-          padding-top: 15px;
-          cursor: pointer;
-          &:hover {
-            color: $colorOrange;
-          }
-        }
+    .footer-bottom {
+      .hr {
+        width: 1000px;
+        height: 3px;
+        background-color: #202529;
       }
     }
   }
 }
+@media only screen and (max-width: 1150px) {
+  footer {
+    .footer-content {
+      padding: 0px 35px;
+      padding-bottom: 100px;
+    }
+    .footer-bottom {
+      .hr {
+        width: 950px;
+        height: 3px;
+        background-color: #202529;
+      }
+    }
+  }
+}
+@media only screen and (max-width: 1050px) {
+  footer {
+    .footer-content {
+      padding: 0px 30px;
+      padding-bottom: 100px;
+    }
+    .footer-bottom {
+      .hr {
+        width: 950px;
+        height: 3px;
+        background-color: #202529;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  footer {
+    .footer-content {
+      padding: 0px 20px;
+      padding-bottom: 100px;
+    }
+    .footer-bottom {
+      .hr {
+        width: 900px;
+        height: 3px;
+        background-color: #202529;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 950px) {
+  footer {
+    .footer-content {
+      padding: 0px 15px;
+      padding-bottom: 100px;
+    }
+    .footer-bottom {
+      .hr {
+        width: 820px;
+        height: 3px;
+        background-color: #202529;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  footer {
+    .footer-content {
+      padding: 0px 10px;
+      padding-bottom: 100px;
+    }
+    .footer-bottom {
+      .hr {
+        width: 770px;
+        height: 3px;
+        background-color: #202529;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 801px) {
+  footer {
+    height: 1080px;
+    .footer-content {
+      align-items: center;
+      padding: 0px 10px;
+      padding-bottom: 100px;
+      flex-direction: column;
+      text-align: center;
+      .footer-left-text {
+        align-items: center;
+        width: 50%;
+      }
+      .footer-center-text {
+        width: 50%;
+        padding-top: 50px;
+      }
+      .footer-right-text {
+        width: 50%;
+        padding-top: 50px;
+      }
+    }
+    .footer-bottom {
+      .hr {
+        width: 700px;
+        height: 3px;
+        background-color: #202529;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 730px) {
+  footer {
+    .footer-bottom {
+      .hr {
+        width: 600px;
+        height: 3px;
+        background-color: #202529;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 620px) {
+  footer {
+    height: 1100px;
+    .footer-bottom {
+      .footer-bottom-span-logos {
+        flex-direction: column;
+        text-align: center;
+        .footer-logo-group {
+          padding-top: 10px;
+        }
+      }
+      .hr {
+        width: 550px;
+        height: 3px;
+        background-color: #202529;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 570px) {
+  footer {
+    height: 1150px;
+    .footer-content {
+      .footer-center-text {
+        .span-wrap {
+          white-space: wrap;
+        }
+      }
+    }
+    .footer-bottom {
+      .footer-bottom-span-logos {
+        flex-direction: column;
+        text-align: center;
+        .footer-logo-group {
+          padding-top: 10px;
+        }
+      }
+      .hr {
+        width: 450px;
+        height: 3px;
+        background-color: #202529;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 470px) {
+  footer {
+    height: 1150px;
+    .footer-bottom {
+      .footer-bottom-span-logos {
+        flex-direction: column;
+        text-align: center;
+        .footer-logo-group {
+          padding-top: 10px;
+        }
+      }
+      .hr {
+        width: 370px;
+        height: 3px;
+        background-color: #202529;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 380px) {
+  footer {
+    height: 1200px;
+    .footer-bottom {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      .footer-bottom-span-logos {
+        flex-direction: column;
+        text-align: center;
+        .footer-logo-group {
+          padding-top: 10px;
+        }
+      }
+      .hr {
+        width: 150px;
+        height: 3px;
+        background-color: #202529;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 340px) {
+  footer {
+    height: 1240px;
+  }
+}
+
+/*#endregion */
 
 //Animations
 /*#region Animation*/
