--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -239,7 +239,7 @@ $colorBlack: #121619;
 }
 
 .shop-background-blur {
-  position: absolute;
+  position: fixed;
   width: 100vw;
   height: 100%;
   background-color: transparent;
@@ -439,6 +439,7 @@ footer {
   flex-direction: column;
   padding-top: 100px;
   .footer-content {
+    animation: marginBottomLowPixel 1s;
     display: flex;
     flex-direction: row;
     padding-bottom: 100px;
@@ -1564,6 +1565,18 @@ footer {
   }
 
   100% {
+    margin-bottom: 0px;
+  }
+}
+
+@keyframes marginBottomLowPixel {
+  0% {
+    opacity: 0.1;
+    margin-top: 30px;
+  }
+
+  100% {
+    opacity: 1;
     margin-bottom: 0px;
   }
 }
